# deepresearch

./: .env.template  .env.template_en  .gitignore  Dockerfile  README.md  README_en.md  blacklist.txt  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
app/api/: routes.py  sse_add_heartbeat.py
app/chat/: chat_summary.py  functions.py
app/search/: fc_deepresearch.py  fc_search.py  models.py  search_after_ai.py  search_searxng_api.py
app/tests/: chat_gemini.py  chat_r1.py  codetest.py  ssetest.py  yiyan.py
app/utils/: black_url.py  compress_content.py  config.py  i18n.py  prompt.py  test_api.py  tools.py  url2txt.py
config/: base_config.py  logging_config.py
webui/: setting.py
webui/templates/: setting.html
